--- a/demo/styles.css
+++ b/demo/styles.css
@@ -4,19 +4,30 @@
     margin: 10px 0;
     overflow-y: auto;
     max-height: 300px; /* adjust height as needed */
-}
-
-/* Styling for the ranking elements */
-.ranking-element {
-    font-size: 1rem;
-    margin: 5px 0;
+    width: fit-content;
+    margin-bottom: 20px;
+    text-align: left;
 }
 
 body {
     display: flex;
-    justify-content: center;   /* Center horizontally */
-    align-items: center;       /* Center vertically */
-    height: 100vh;             /* Take up full viewport height */
+    flex-direction: column;    /* Stack elements vertically */
+    align-items: center;       /* Center elements horizontally */
+    height: 100vh;             /* Take the full height of the viewport */
     margin: 0;                 /* Remove default margin */
-    font-family: Arial, sans-serif; /* Optional: Choose a nice font */
-  }
+    text-align: center;        /* Centers the text in the <h1> */
+}
+  
+h1 {
+    margin-bottom: 20px;       /* Adds space below the heading */
+}
+
+h2 {
+    font-size: 18px; /* Set the font size */
+    color: #333; /* Set the text color */
+    text-align: center; /* Optionally, center the text */
+}
+
+.slider {
+    margin-bottom: 20px;
+}
