--- a/fanscale/styles.css
+++ b/fanscale/styles.css
@@ -89,10 +89,24 @@ label, select, button, input[type="number"], input[type="range"], .teams-contain
     margin-bottom: 10px;
 }
 
-.rankings-placeholder {
+.rankings-container {
     padding: 20px 0;
     border-top: 1px solid #ccc;
 }
+
+.rankings-table {
+    width: 100%;
+    border-collapse: collapse;
+    background-color: #f5f5f5;
+  }
+  
+  .rankings-table th,
+  .rankings-table td {
+    text-align: left;
+    padding: 8px;
+    border-bottom: 1px solid #ccc;
+  }
+  
 
 @media (max-width: 768px) {
     .selection-container {
@@ -127,16 +141,23 @@ label, select, button, input[type="number"], input[type="range"], .teams-contain
 
 .slider-element {
     display: flex;
-    width: 100%;
-    gap: 10px;
+    justify-content: center; /* horizontal centering */
+    align-items: center;     /* vertical centering */
+    height: 5vh;           /* or whatever height you want */
+    gap: 20px;               /* optional spacing between items */
 }
 
 .slider-label {
     flex: 1;
+    min-width: 90px;
 }
 
 .slider-input {
     flex: 10;
+}
+
+.slider-value {
+    min-width: 30px;
 }
 
 .remove-button {
