--- a/fanscale/styles.css
+++ b/fanscale/styles.css
@@ -49,7 +49,7 @@
 
 .selection-container {
     display: flex;
-    gap: 20px;
+    gap: 30px;
     padding: 20px 0;
 }
 
@@ -87,6 +87,25 @@
 label, select, button, input[type="number"], input[type="range"], .teams-container {
     width: 100%;
     margin-bottom: 10px;
+}
+
+select {
+        appearance: none;
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        padding: 8px 30px 8px 10px; /* Adjusted padding to make room for the arrow */
+        flex-grow: 1;
+        background-color: white;
+        border: 1px solid black;
+        border-radius: 0; /* Sharp edges */
+        cursor: pointer;
+        box-sizing: border-box;
+        width: 100%; /* Ensure the select takes up full width */
+        background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="black"><path d="M7 10l5 5 5-5z"/></svg>');
+        background-repeat: no-repeat;
+        background-position: right 10px center;
+        background-size: 16px 16px;
+        color: black; /* Ensure text is black */
 }
 
 .rankings-container {
