--- a/fanscale/styles.css
+++ b/fanscale/styles.css
@@ -7,7 +7,7 @@
 }
 
 .container {
-    max-width: 1400px;
+    max-width: 1100px;
     margin: auto;
     padding: 0 40px;
 }
@@ -89,23 +89,31 @@ label, select, button, input[type="number"], input[type="range"], .teams-contain
     margin-bottom: 10px;
 }
 
+button {
+    border-color: rgb(190, 190, 190);
+    box-shadow: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+}
+
 select {
-        appearance: none;
-        -webkit-appearance: none;
-        -moz-appearance: none;
-        padding: 8px 30px 8px 10px; /* Adjusted padding to make room for the arrow */
-        flex-grow: 1;
-        background-color: white;
-        border: 1px solid black;
-        border-radius: 0; /* Sharp edges */
-        cursor: pointer;
-        box-sizing: border-box;
-        width: 100%; /* Ensure the select takes up full width */
-        background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="black"><path d="M7 10l5 5 5-5z"/></svg>');
-        background-repeat: no-repeat;
-        background-position: right 10px center;
-        background-size: 16px 16px;
-        color: black; /* Ensure text is black */
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    padding: 8px 30px 8px 10px; /* Adjusted padding to make room for the arrow */
+    flex-grow: 1;
+    background-color: white;
+    border: 1px solid black;
+    border-radius: 0; /* Sharp edges */
+    cursor: pointer;
+    box-sizing: border-box;
+    width: 100%; /* Ensure the select takes up full width */
+    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="black"><path d="M7 10l5 5 5-5z"/></svg>');
+    background-repeat: no-repeat;
+    background-position: right 10px center;
+    background-size: 16px 16px;
+    color: black; /* Ensure text is black */
 }
 
 .rankings-container {
@@ -168,7 +176,7 @@ select {
 
 .slider-label {
     flex: 1;
-    min-width: 90px;
+    min-width: 80px;
 }
 
 .slider-input {
