text size and color changes

--- a/fanscale/styles.css
+++ b/fanscale/styles.css
@@ -24,12 +24,12 @@
 .logo {
     display: flex;
     align-items: center;
-    font-size: 32px;
+    font-size: 22px;
 }
 
 .logo img {
-    width: 80px;
-    height: 80px;
+    width: 60px;
+    height: 60px;
     margin-right: 10px;
     margin-left: 10px;
 }
@@ -40,11 +40,11 @@
 }
 
 .nav-links a {
-    margin-left: 20px;
-    margin-right: 20px;
+    margin-left: 16px;
+    margin-right: 16px;
     text-decoration: none;
     color: black;
-    font-size: 20px;
+    font-size: 16px;
 }
 
 .selection-container {
@@ -90,11 +90,15 @@ label, select, button, input[type="number"], input[type="range"], .teams-contain
 }
 
 button {
-    border-color: rgb(190, 190, 190);
-    box-shadow: none;
-    -webkit-appearance: none;
-    -moz-appearance: none;
     appearance: none;
+    text-rendering: auto;
+    letter-spacing: normal;
+    word-spacing: normal;
+    line-height: normal;
+    text-align: center;
+    box-sizing: border-box;
+    border-color: rgb(124, 124, 124);
+    color: black;
 }
 
 select {
