--- a/fanscale/styles.css
+++ b/fanscale/styles.css
@@ -84,7 +84,7 @@
 }
 
 
-label, select, button, input[type="number"], input[type="range"], .teams-container {
+select, button, input[type="number"], .teams-container {
     width: 100%;
     margin-bottom: 10px;
 }
@@ -157,6 +157,7 @@ select {
     display: flex;
     width: 100%;
     gap: 10px;
+    margin-top: 10px;
 }
     
 .feature-dropdown {
@@ -176,11 +177,14 @@ select {
     align-items: center;     /* vertical centering */
     height: 5vh;           /* or whatever height you want */
     gap: 20px;               /* optional spacing between items */
+    text-align: center;
 }
 
 .slider-label {
     flex: 1;
-    min-width: 80px;
+    min-width: 65px;
+    font-size: 14px;
+    align-items: center;
 }
 
 .slider-input {
